--- a/views/admin/packages/index.ejs
+++ b/views/admin/packages/index.ejs
@@ -73,7 +73,7 @@
                       <a href="/admin/packages/edit/<%= package._id %>" class="text-blue-600 hover:text-blue-800">
                         Edit
                       </a>
-                      <form action="/admin/packages/<%= package._id %>?_method=DELETE" method="POST" class="inline" onsubmit="return confirm('Are you sure you want to delete this package?');">
+                      <form action="/admin/packages/<%= package._id %>/delete" method="POST" class="inline" onsubmit="return confirm('Are you sure you want to delete this package?');">
                         <button type="submit" class="text-red-600 hover:text-red-800">
                           Delete
                         </button>
