--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="/css/interactive-demo.css">
   <link rel="stylesheet" href="/css/demo-page.css">
   <link rel="stylesheet" href="/css/page-builder.css">
+  <link rel="stylesheet" href="/css/website-builder-demo.css">
+  <link rel="stylesheet" href="/css/package-calculator.css">
   <!-- Favicon -->
   <link rel="icon" href="/images/favicon.ico">
   <script>
@@ -98,6 +100,7 @@
   <script src="/js/main.js"></script>
   <script src="/js/interactive-demo.js"></script>
   <script src="/js/counter-animation.js"></script>
+  <script src="/js/flash-messages.js"></script>
   <script src="/js/demo-page.js"></script>
 
   <!-- ApexCharts for Analytics -->
