--- a/views/layouts/no-footer.ejs
+++ b/views/layouts/no-footer.ejs
@@ -82,13 +82,16 @@
 </head>
 <body class="dark bg-dark-300 text-gray-100 min-h-screen flex flex-col">
   <%- include('../partials/navbar') %>
-  
+
   <div class="container mx-auto px-4 py-6 flex-grow">
     <%- include('../partials/messages') %>
     <%- body %>
   </div>
-  
+
   <!-- Custom JS -->
   <script src="/js/main.js"></script>
+
+  <!-- Admin Maintenance Helper -->
+  <script src="/js/admin-maintenance.js"></script>
 </body>
 </html>
